# text_splitter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_tests.py  script.py  setup.py  test.txt
.github/workflows/: ci.yml
data/input/: large_test.txt  test.txt
src/: gui.py  main.py  text_splitter.py
src/components/ui/: button.tsx
tests/: test_splitter.py
text_splitter_project/src/: text_splitter.py
